# archie

./: README.md
archie_description/: CMakeLists.txt  package.xml
archie_description/config/: ros2_controllers.yaml
archie_description/launch/: spawn.launch.py
archie_description/urdf/: gazebo.xacro  linear_gripper.xacro  manipulator.xacro
archie_hardware/: package.xml  setup.cfg  setup.py
archie_hardware/archie_hardware/: dynamixel_bridge.py  motor_driver.py
archie_hardware/launch/: real_bringup.launch.py
archie_master/: package.xml  setup.cfg  setup.py
archie_master/archie_master/: archie_tracer.py  plan.py  write_word.py
archie_master/launch/: archie_bringup.launch.py  plan.launch.py  visualize_archie.launch.py  write_word.launch.py
archie_moveit2/: .setup_assistant  CMakeLists.txt  package.xml
archie_moveit2/config/: archie.ros2_control.xacro  archie.srdf  archie.urdf.xacro  initial_positions.yaml  joint_limits.yaml  moveit.rviz  moveit_controllers.yaml  ros2_controllers.yaml
archie_moveit2/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
